k8s/elasticsearch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic
  namespace: team
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      labels:
        app: elastic
    spec:
      containers:
        - name: elastic
          image: elasticsearch:7.14.2
          command:
            - /bin/sh
            - -c
            - |
              ./bin/elasticsearch-plugin list | grep -q ingest-attachment || yes | ./bin/elasticsearch-plugin install --silent ingest-attachment;
              /usr/local/bin/docker-entrypoint.sh eswrapper
          ports:
            - containerPort: 9200
          resources:
            requests:
              memory: 768Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: "1"
          readinessProbe:
            httpGet:
              path: /_cluster/health
              port: 9200
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: elastic-data
              mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: elastic-data
          persistentVolumeClaim:
            claimName: elastic-data
---
apiVersion: v1
kind: Service
metadata:
  name: elastic
  namespace: team
spec:
  selector:
    app: elastic
  ports:
    - port: 9200
      targetPort: 9200
