k8s/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-nginx
  namespace: team
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team-nginx
  template:
    metadata:
      labels:
        app: team-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.3
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: branding
              mountPath: /var/cfg/branding.json
              subPath: branding.json
          resources:
            requests:
              memory: 32Mi
              cpu: 25m
            limits:
              memory: 128Mi
              cpu: 250m
      volumes:
        - name: nginx-config
          configMap:
            name: team-nginx-config
        - name: branding
          configMap:
            name: team-branding
---
apiVersion: v1
kind: Service
metadata:
  name: team-nginx
  namespace: team
spec:
  selector:
    app: team-nginx
  ports:
    - port: 80
      targetPort: 80
